SOLR-13565: Precommit errors